making demos, finding bugs

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
         </section>
         <div class="alt-section">
           <div class="split-content">
-              <section class="demo-copy">
-                <h2 class="demo-copy-header">Let's just take a look.</h2>
-                <p class="demo-copy-text">Some things are easier to show than tell, so we set up a quick demo to show how Lodge works with embeds.</p>
-                <button class="demo-copy-button">Show the demo embed</button>
-              </section>
+            <section class="demo-copy">
+              <h2 class="demo-copy-header">Let's just take a look.</h2>
+              <p class="demo-copy-text">Some things are easier to show than tell, so we set up a quick demo to show how Lodge works with embeds.</p>
+              <button class="demo-copy-button">Show the demo embed</button>
+            </section>
             <div class="demo-embed">
               <embed class="lodge" src="embed.html" id="demo" title="lodge demo embed" data-css=".logo{color:#a00;}">
             </div>
@@ -128,8 +128,8 @@
     },
     {
       // 0: showing the embed itself, resizing, etc
-      'header':'The overlay makes messaging easy',
-      'text':'Just a single line in the main window or the embed and you\'re handling messaging or interaction.',
+      'header':'A full-screen overlay',
+      'text':'From the main window or an embed, the Lodge overlay easily handles messging, media, and more.',
       'button':'Reset it all'
     }
   ]
