added a quick video demo panel

--- a/embed.html
+++ b/embed.html
@@ -30,6 +30,10 @@
       <h2>Pass notes in an overlay.</h2>
       In the main window or the embed, just <a href="#" class="demo-domessage">say hello</a> or ask a question.
     </div>
+    <div class="demo-panel demo-panel-2">
+      <h2>Who doesn't love movies?</h2>
+      The overlay is perfect for calling up your <a href="https://vimeo.com/187604216">favorite videos</a>.
+    </div>
   </div>
   
   <div class="demo-snacks"><img src ="/assets/images/demo-snacks.gif" width="100%" height="auto" alt="I love snacks."></div>
