--- a/index.html
+++ b/index.html
@@ -127,9 +127,15 @@
       'button':'Tell me about the overlay'
     },
     {
-      // 0: showing the embed itself, resizing, etc
+      // 1: introduce the overlay, show prompts
       'header':'A full-screen overlay',
       'text':'From the main window or an embed, the Lodge overlay easily handles messging, media, and more.',
+      'button':'Just show me more video'
+    },
+    {
+      // 2: movies in the overlay
+      'header':'Movies or whatever',
+      'text':'This time we show a video opening in the main window overlay, called from the embed.',
       'button':'Reset it all'
     }
   ]
