font updates, type styles, video demo

--- a/embed.html
+++ b/embed.html
@@ -31,8 +31,13 @@
       In the main window or the embed, just <a href="#" class="demo-domessage">say hello</a> or ask a question.
     </div>
     <div class="demo-panel demo-panel-2">
-      <h2>Who doesn't love movies?</h2>
-      The overlay is perfect for calling up your <a href="https://vimeo.com/187604216">favorite videos</a>.
+      <h2>Videos looks great big.</h2>
+      <div class="demo-videolisting">
+        <a href="https://vimeo.com/187604216">
+          <img src="https://i.vimeocdn.com/video/598143533_640x360.webp" class="demo-video" alt="Kool Keith X MF DOOM: Super Heroes">
+          <b>Kool Keith X MF DOOM</b> <br>Super Heroes
+        </a>
+      </div>
     </div>
   </div>
   
