auto-embed iframe fixes & demo

--- a/embed.html
+++ b/embed.html
@@ -39,6 +39,10 @@
         </a>
       </div>
     </div>
+    <div class="demo-panel demo-panel-3">
+      <h2>Get interactive.</h2>
+      Open bigger interactive components <embed class="lodge overlay" src="embed.html" id="demo2" title="in an overlay"> and give them some space.
+    </div>
   </div>
   
   <div class="demo-snacks"><img src ="/assets/images/demo-snacks.gif" width="100%" height="auto" alt="I love snacks."></div>
