--- a/index.html
+++ b/index.html
@@ -136,6 +136,12 @@
       // 2: movies in the overlay
       'header':'Movies or whatever',
       'text':'This time we show a video opening in the main window overlay, called from the embed.',
+      'button':'Get fancier. What else?'
+    },
+    {
+      // 3: talk about interactive lodge embeds in the overlay
+      'header':'The pop up embed one',
+      'text':'Open an interactive embed in the overlay and collect input, events, or whatever you need.',
       'button':'Reset it all'
     }
   ]
