more CSS tweaks, overlay embed demo

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <p>
                   Lodge inserts its CSS at the top of the cascade, so you can add custom styles to embeds and the overlay:<br>
                 </p>
-                <code>.vv__embed, .vv__overlay</code>
+                <code>.lodge__embed, .lodge__overlay</code>
                 <p>
                   It's all event driven, and Lodge will tell you when it's ready:
                 </p>
