--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="theme-color" content="#000000">
 
   <meta property="og:title" content="lodge, by substation">
+  <meta property="og:description" content="A lightweight front-end library that makes it easy to build smart overlays and embeds.">
   <meta property="og:type" content="image/png">
   <meta property="og:url" content="https://lodge.substation.dev/">
   <meta property="og:image" content="https://lodge.substation.dev/assets/images/opengraph-lodge.png">
