Final demo panel copy
...plus a few style tweaks.

--- a/embed.html
+++ b/embed.html
@@ -29,15 +29,15 @@
     ------------------------------------------ -->
   <div class="demo-panels">
     <div class="demo-panel demo-panel-0">
-      <h2>So this bit's an iframe.</h2>
-      Thanks to shared events, the main window can resize the embed as needed. <a href="#" class="demo-doresize">Check it out.</a>
+      <h2>This iframe fills its container</h2>
+      And thanks to shared events, the main window will even resize it as needed. <a href="#" class="demo-doresize">Check it out.</a>
     </div>
     <div class="demo-panel demo-panel-1">
-      <h2>Messages and modals.</h2>
-      Quickly <a href="#" class="demo-domessage">display a message</a> or or <a href="#" class="demo-domodal">make a modal query</a> in the overlay.
+      <h2>Messages and modals</h2>
+      Quickly <a href="#" class="demo-domessage">display a message</a> or or <a href="#" class="demo-domodal">make a modal query</a> in the overlay, styled for desktop and mobile.
     </div>
     <div class="demo-panel demo-panel-2">
-      <h2>Videos looks great big.</h2>
+      <h2>Full-size media in the overlay</h2>
       <div class="demo-videolisting">
         <a href="https://vimeo.com/187604216">
           <img src="https://i.vimeocdn.com/video/598143533_640x360.webp" class="demo-video" alt="Kool Keith X MF DOOM: Super Heroes">
@@ -46,8 +46,8 @@
       </div>
     </div>
     <div class="demo-panel demo-panel-3">
-      <h2>Get interactive.</h2>
-      Open bigger interactive components <embed class="lodge overlay" src="embed.html" id="demo2" title="in an overlay"> and give them some space.
+      <h2>Get interactive</h2>
+      Open bigger interactive components <embed class="lodge overlay" src="embed.html" id="demo2" title="in an overlay"> with more space to explore interaction.
     </div>
   </div>
   
