--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- △△ Oh hi. Yeah. This is a good spot to look for more of how Lodge works ---- -->
+
 <!doctype html>
 <html lang="en" class="substation-brand-page">
 
@@ -42,15 +44,26 @@
     <main>
         <section class="intro">
           <h1 class="logo-lodge">lodge</h1>
-          <h2>Simple messaging, input, media, and checkout for embeds</h2>
-          <p class="icon-paragraph feature-embed">Lodge was made for a more decentralized web where anyone can build a space of their own. Platform features let us talk, upload media, place orders, and connect. They're already used by developers via API. Lodge helps extend them into any site as easily as embedding a video.</p>
-          <p class="icon-paragraph feature-overlay">Built to bring UI consistency to critical workflows, Lodge is a lightweight, open library with no dependencies. It runs on both page and embed, securely synchronizing events and adding a shared overlay for modals, messages, and (coming soon) even a full checkout flow.</p>
+          <h2>Building blocks for easier, smarter overlays &amp; embeds</h2>
+          <p class="icon-paragraph feature-embed">
+            Lodge was made for a more decentralized web where anyone can build a space of their own. Platform 
+            features let us talk, upload media, place orders, and connect. They're already used by developers 
+            via API. Lodge helps extend them into any site as easily as embedding a video.
+          </p>
+          <p class="icon-paragraph feature-overlay">
+            Built to bring UI consistency to critical workflows, Lodge is a lightweight, open library with no 
+            dependencies. It runs on both page and embed, securely synchronizing events and adding a shared 
+            overlay for modals, messages, and (coming soon) even a full checkout flow.
+          </p>
         </section>
         <div class="alt-section">
           <div class="split-content">
             <section class="demo-copy">
-              <h2 class="demo-copy-header">Let's just take a look.</h2>
-              <p class="demo-copy-text">Some things are easier to show than tell, so we set up a quick demo to show how Lodge works with embeds.</p>
+              <h2 class="demo-copy-header">Let's take a look.</h2>
+              <p class="demo-copy-text">
+                We set up a quick demo embed to show off the basics and a little more. Just click
+                below for a tour.
+              </p>
               <button class="demo-copy-button">Show the demo embed</button>
             </section>
             <div class="demo-embed">
@@ -63,12 +76,13 @@
                 <section class="features">
                     <h3>Features</h3> 
                     <ul>
-                        <li>Easily create iframe embeds and securely share events across windows</li>
+                        <li>Quickly build smart iframe</li>
                         <li>A universal and responsive overlay</li>
-                        <li>Debug mode to help see what's happening while you build</li>
-                        <li>Override CSS of embeds with a simple data attribute</li>
-                        <li>Automatically <a href="https://www.youtube.com/watch?v=h9T0ICrAzqU">show</a> <a href="https://vimeo.com/15744536">videos</a> in a full-screen overlay (optional)</li>
-                        <li>Request simple user input with generated modal forms</li>
+                        <li>Secure shared events between embed(s) and a main page</li>
+                        <li>Style it with CSS, extend it with JavaScript</li>
+                        <li>Debug mode to help see what's happening</li>
+                        <li>Automatically <a href="https://www.youtube.com/watch?v=h9T0ICrAzqU">show</a> <a href="https://vimeo.com/15744536">videos</a> in the overlay (optional)</li>
+                        <li>Request user input in the overlay</li>
                     </ul>
                 </section>
                 <div class="links">
@@ -82,15 +96,9 @@
                 <p>
                   Embed iframes are created from simple markup:
                 </p>
-                <code>&lt;embed class="lodge" src="embed.html"&gt;</code>
-                <p>
-                  You can push CSS overrides to an embed with a data attribute:<br>
-                </p>
-                <code>data-css=".logo{color:#a00;}"</code>
-                <p>
-                  Lodge inserts its CSS at the top of the cascade, so you can add custom styles to embeds and the overlay:<br>
-                </p>
-                <code>.lodge__embed, .lodge__overlay</code>
+                <code>
+                  &lt;embed class="lodge" src="embed.html"&gt;
+                </code>
                 <p>
                   It's all event driven, and Lodge will tell you when it's ready:
                 </p>
@@ -99,6 +107,10 @@
                     &nbsp;&nbsp;// ...do something <br>
                   });
                 </code>
+                <p>
+                  Lodge inserts empty utility classes so you can make a page context-responsive — styles for standalone, embed, and embed-in-overlay:<br>
+                </p>
+                <code>.lodge__embed,  .lodge__embed--overlay</code>
                 <p>
                   Need to see what's happening in real-time as your scripts run? Just add <code>?debug=true</code> to
                   the main page URL and see console log activity for the main page and embeds.
@@ -121,30 +133,35 @@
   let demoHeader = document.querySelector('.demo-copy-header');
   let demoText = document.querySelector('.demo-copy-text');
   let demoButton = document.querySelector('.demo-copy-button');
+  /*
+    The script for all copy changes is this demoScript array. When the button is clicked
+    it fires an event to the demo embed asking it to change its position then fades all 
+    the demo controls out on the main page, swaps text, and fades them back in.
+  */
   let demoScript = [
     {
       // 0: showing the embed itself, resizing, etc
-      'header':'Pretty neat, right?',
+      'header':'An embed that just fits',
       'text':'Lodge turns a simple &lt;embed&gt; tag into an iframe, sized to fit responsively wherever you put it.',
-      'button':'Tell me about the overlay'
+      'button':'Messages and modals ➜'
     },
     {
       // 1: introduce the overlay, show prompts
-      'header':'A full-screen overlay',
-      'text':'From the main window or an embed, the Lodge overlay easily handles messging, media, and more.',
-      'button':'Just show me more video'
+      'header':'Messages and modals',
+      'text':'From the main window or an embed, one line of JavaScript can show a message or ask a question.',
+      'button':'Media handling ➜'
     },
     {
       // 2: movies in the overlay
-      'header':'Movies or whatever',
-      'text':'This time we show a video opening in the main window overlay, called from the embed.',
-      'button':'Get fancier. What else?'
+      'header':'Media handling',
+      'text':'Lodge has an option to turn YouTube and Vimeo links that open responsive videos in the overlay.',
+      'button':'The pop up embed one ➜'
     },
     {
       // 3: talk about interactive lodge embeds in the overlay
       'header':'The pop up embed one',
-      'text':'Open an interactive embed in the overlay and collect input, events, or whatever you need.',
-      'button':'Reset it all'
+      'text':'Add an "overlay" class to a lodge &lt;embed&gt; and easily open a custom page in the overlay.',
+      'button':'Back to the beginning'
     }
   ]
 
