quick spelling hotfix

--- a/embed.html
+++ b/embed.html
@@ -114,7 +114,7 @@
           e.preventDefault();
           vv.prompt.modal({
             message: 'Oh, hi there.',
-            context: 'The modal option removes the overlay\'s close button, forcing a binary choice. OK/Cancel buttons can be customized, and an event is fired in the main lodge window as wel as the embed after a user clicks their choice.',
+            context: 'The modal option removes the overlay\'s close button, forcing a binary choice. OK/Cancel buttons can be customized, and an event is fired in the main lodge window as well as the embed after a user clicks their choice.',
             queryName: 'demo-modal' // this will be included in a modalchoice event to catch specific queries (callbacks TBD)
           });
         }, false);
