--- a/embed.html
+++ b/embed.html
@@ -64,10 +64,9 @@
   <div class="demo-overlay">
     <h2>Oh hello again.</h2>
     <p>
-      This is actually the same demo embed, but when opened in an embed lodge adds
+      This is actually the same demo embed. When opened in an embed lodge adds
       a <code>.lodge__embed--overlay</code> class we can use to show, hide, and 
-      switch things around. Comes in handy when you want something to work as both
-      a standalone page and as embedded content.
+      switch things around. Makes any page embed context resonsive.
     </p>
     <button class="demo-overlay__button">Close</button>
   </div>
