--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   It's all event driven, and Lodge will tell you when it's ready:
                 </p>
                 <code>
-                  window.lodge.events.add( vv, 'ready', function(e) {<br>
+                  window.lodge.addEventListener('ready', function(e) {<br>
                     &nbsp;&nbsp;// ...do something <br>
                   });
                 </code>
