--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <section class="features">
                     <h3>Features</h3> 
                     <ul>
-                        <li>Quickly build smart iframe</li>
+                        <li>Quickly build smart iframes</li>
                         <li>A universal and responsive overlay</li>
                         <li>Secure shared events between embed(s) and a main page</li>
                         <li>Style it with CSS, extend it with JavaScript</li>
