--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="description" content="A frontend JavaScript library providing simple messaging, input, media, and checkout flow — even for embeds.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#000000">
+  <meta name="monetization" content="$ilp.uphold.com/YneX3P8nWLwW">
 
   <meta property="og:title" content="lodge, by substation">
   <meta property="og:description" content="A lightweight front-end library that makes it easy to build smart overlays and embeds.">
